--- a/backend/PollSystem/pom.xml
+++ b/backend/PollSystem/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
     </dependencies>
 
     <build>
