--- a/backend/PollSystem/pom.xml
+++ b/backend/PollSystem/pom.xml
@@ -55,22 +55,22 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.25</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.soen</groupId>-->
-<!--            <artifactId>PolLib</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>/Users/t_chaml/Programming/PollSystem/polllib/PollLib/target/PollLib-1.0-SNAPSHOT.jar</systemPath>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.soen</groupId>
+            <artifactId>PolLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>/Users/t_chaml/Programming/PollSystem/polllib/PollLib/out/artifacts/PollLib_jar/PollLib.jar</systemPath>
         </dependency>
     </dependencies>
 
