--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -25,9 +25,24 @@
             <version>1.4</version>
         </dependency>
         <dependency>
+            <groupId>com.soen</groupId>
+            <artifactId>PolLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../polllib/PollLib/out/artifacts/PollLib_jar/PollLib.jar
+            </systemPath>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Plugin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../Plugin/out/artifacts/Plugin_jar/Plugin.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
