--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -44,6 +44,18 @@
             <scope>system</scope>
             <systemPath>${basedir}/../Plugin/out/artifacts/Plugin_jar/Plugin.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
